<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="org.oppia.app.topic.train.TopicTrainViewModel" />

    <variable
      name="presenter"
      type="org.oppia.app.topic.train.TopicTrainFragmentPresenter" />
  </data>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oppiaBackground"
    android:overScrollMode="never"
    android:scrollbars="none"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingBottom="@dimen/bottom_white_space">

      <TextView
        android:id="@+id/master_skills_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/topic_train_master_these_skills"
        android:textColor="@color/oppiaPrimaryText"
        android:textSize="20sp" />

      <TextView
        android:id="@+id/skills_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="sans-serif"
        android:text="@string/topic_train_skills_description"
        android:textColor="@color/oppiaSecondaryText"
        android:textSize="16sp" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skill_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

      <Button
        android:id="@+id/topic_train_start_button"
        style="@style/StateButtonInactive"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@{viewModel.isSubmitButtonActive() ? @drawable/state_button_primary_background :@drawable/start_button_transparent_background}"
        android:clickable="@{viewModel.isSubmitButtonActive()}"
        android:minHeight="48dp"
        android:onClick="@{viewModel::startButtonClicked}"
        android:text="@string/topic_train_start"
        android:textColor="@{viewModel.isSubmitButtonActive()? @color/white : @color/submitButtonInactive}" />
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</layout>
