<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="isChecked"
      type="Boolean" />

    <variable
      name="skill"
      type="org.oppia.app.model.SkillSummary" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:barrierDirection="right"
    app:constraint_referenced_ids="button_example,text_view_status">

    <androidx.constraintlayout.widget.Barrier
      android:id="@+id/topic_train_skill_barrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:constraint_referenced_ids="skill_check_box" />

    <CheckBox
      android:id="@+id/skill_check_box"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:button="@drawable/selector_checkbox"
      android:checked="@{isChecked}"
      android:fontFamily="sans-serif"
      android:gravity="top"
      android:minHeight="48dp"
      android:paddingStart="20dp"
      android:paddingEnd="20dp"
      android:text="@{skill.description}"
      android:textColor="@color/oppiaPrimaryText"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
